--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
     <head><link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="style.css">
+	<title>To Do App</title>
     </head>
     <body>
         <div id="root"></div>
